[gd_scene load_steps=3 format=3 uid="uid://d3t65n750mt2s"]

[ext_resource type="Script" uid="uid://d1nlgreeica6b" path="res://scripts/ui/SkillTreeUI.gd" id="1_khdce"]
[ext_resource type="PackedScene" uid="uid://50qclboee12a" path="res://scenes/ui/skill_tree/SkillTreeNode.tscn" id="2_whskd"]

[node name="SkillTreeUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_khdce")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.15, 0.15, 1)

[node name="TreeContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BreachTreeSection" type="Control" parent="TreeContainer"]
layout_mode = 1
anchors_preset = 0
offset_right = 540.0
offset_bottom = 360.0

[node name="PointCounter" type="Label" parent="TreeContainer/BreachTreeSection"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -12.5
offset_top = -60.0
offset_right = 12.5
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 0
text = "0/0"

[node name="NodeContainer" type="Control" parent="TreeContainer/BreachTreeSection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BreachNode1" parent="TreeContainer/BreachTreeSection/NodeContainer" instance=ExtResource("2_whskd")]
layout_mode = 0
offset_left = 235.0
offset_top = 64.0
offset_right = 299.0
offset_bottom = 128.0

[node name="BreachNode2" parent="TreeContainer/BreachTreeSection/NodeContainer" instance=ExtResource("2_whskd")]
layout_mode = 0
offset_left = 234.0
offset_top = 141.0
offset_right = 298.0
offset_bottom = 205.0

[node name="BreachNode3" parent="TreeContainer/BreachTreeSection/NodeContainer" instance=ExtResource("2_whskd")]
layout_mode = 1
offset_left = 233.0
offset_top = 222.0
offset_right = 297.0
offset_bottom = 286.0

[node name="SectionLabel" type="Label" parent="TreeContainer/BreachTreeSection"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.5
offset_right = 45.5
offset_bottom = 23.0
grow_horizontal = 2
text = "BREACH"
horizontal_alignment = 1

[node name="RitualTreeSection" type="Control" parent="TreeContainer"]
anchors_preset = 0
offset_left = 540.0
offset_right = 1080.0
offset_bottom = 360.0

[node name="SectionLabel" type="Label" parent="TreeContainer/RitualTreeSection"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.0
offset_right = 28.0
offset_bottom = 23.0
grow_horizontal = 2
text = "RITUAL"
horizontal_alignment = 1

[node name="PointCounter" type="Label" parent="TreeContainer/RitualTreeSection"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -12.5
offset_top = -60.0
offset_right = 12.5
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 0
text = "0/0"
horizontal_alignment = 2

[node name="NodeContainer" type="Control" parent="TreeContainer/RitualTreeSection"]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RitualNode1" parent="TreeContainer/RitualTreeSection/NodeContainer" instance=ExtResource("2_whskd")]
offset_left = 234.0
offset_top = 211.0
offset_right = 298.0
offset_bottom = 275.0

[node name="RitualNode2" parent="TreeContainer/RitualTreeSection/NodeContainer" instance=ExtResource("2_whskd")]
offset_left = 236.0
offset_top = 136.0
offset_right = 300.0
offset_bottom = 200.0

[node name="PackTreeSection" type="Control" parent="TreeContainer"]
anchors_preset = 0
offset_top = 360.0
offset_right = 540.0
offset_bottom = 720.0

[node name="SectionLabel" type="Label" parent="TreeContainer/PackTreeSection"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.5
offset_right = 45.5
offset_bottom = 23.0
grow_horizontal = 2
text = "PACK HUNT"
horizontal_alignment = 1

[node name="PointCounter" type="Label" parent="TreeContainer/PackTreeSection"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -12.5
offset_top = -60.0
offset_right = 12.5
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 0
text = "0/0"
horizontal_alignment = 2

[node name="NodeContainer" type="Control" parent="TreeContainer/PackTreeSection"]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PackNode1" parent="TreeContainer/PackTreeSection/NodeContainer" instance=ExtResource("2_whskd")]
offset_left = 240.0
offset_top = 218.0
offset_right = 304.0
offset_bottom = 282.0

[node name="BossTreeSection" type="Control" parent="TreeContainer"]
anchors_preset = 0
offset_left = 540.0
offset_top = 360.0
offset_right = 1080.0
offset_bottom = 720.0

[node name="SectionLabel" type="Label" parent="TreeContainer/BossTreeSection"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.5
offset_right = 20.5
offset_bottom = 23.0
grow_horizontal = 2
text = "BOSS"
horizontal_alignment = 1

[node name="PointCounter" type="Label" parent="TreeContainer/BossTreeSection"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -12.5
offset_top = -60.0
offset_right = 12.5
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 0
text = "0/0"

[node name="NodeContainer" type="Control" parent="TreeContainer/BossTreeSection"]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BossNode1" parent="TreeContainer/BossTreeSection/NodeContainer" instance=ExtResource("2_whskd")]
offset_left = 234.0
offset_top = 215.0
offset_right = 298.0
offset_bottom = 279.0

[node name="UIPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.037
anchor_bottom = 0.056
offset_left = -44.0
offset_top = 5.0
offset_right = -43.9601
offset_bottom = 4.68

[node name="VBoxContainer" type="VBoxContainer" parent="UIPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CloseButton" type="Button" parent="UIPanel/VBoxContainer"]
layout_mode = 2
text = "X"

[node name="TooltipContainer" type="Control" parent="."]
anchors_preset = 0

[node name="TooltipPanel" type="Panel" parent="TooltipContainer"]
layout_mode = 0

[node name="TooltipLabel" type="RichTextLabel" parent="TooltipContainer/TooltipPanel"]
layout_mode = 0
fit_content = true
